feat: implemented isActual filter