@@ -8,19 +8,23 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import ru.agr.backend.looksliketests.config.security.exception.UserNotFoundException;
 import ru.agr.backend.looksliketests.controller.ApiVersion;
 import ru.agr.backend.looksliketests.controller.resources.StudentTestAssignationCollectionResource;
 import ru.agr.backend.looksliketests.controller.resources.StudentTestHistoryCollectionResource;
 import ru.agr.backend.looksliketests.controller.test.service.TestResourceService;
+import ru.agr.backend.looksliketests.service.StudentAssignedTestService;
 import ru.agr.backend.looksliketests.service.StudentTestHistoryService;
 import ru.agr.backend.looksliketests.service.TestService;
 import ru.agr.backend.looksliketests.service.auth.UserService;
+import ru.agr.backend.looksliketests.service.filter.StudentAssignedTestFilter;
 import ru.agr.backend.looksliketests.service.filter.StudentTestHistoryFilter;
 import ru.agr.backend.looksliketests.service.filter.TestFilter;
 
 import java.util.Collections;
+import java.util.List;
 
 /**
  * @author Arslan Rabadanov
@@ -34,16 +38,19 @@ public class StudentAssignedTestsController {
     private final StudentTestHistoryService studentTestHistoryService;
     private final TestResourceService testResourceService;
     private final UserService userService;
+    private final StudentAssignedTestService studentAssignedTestService;
 
     @GetMapping("/tests/assignations")
     public ResponseEntity<StudentTestAssignationCollectionResource> getAssignations(Pageable pageable,
+                                                                                    @RequestParam(required = false) Boolean isActual,
                                                                                     @AuthenticationPrincipal UserDetails userDetails) {
         final var user = userService.findByUsername(userDetails.getUsername())
                 .orElseThrow(() -> new UserNotFoundException("User not found"));
-        final var filter = TestFilter.builder()
-                .studentId(Collections.singletonList(user.getId()))
+        var filter = StudentAssignedTestFilter.builder()
+                .isActual(isActual)
+                .studentIds(List.of(user.getId()))
                 .build();
-        final var testsPage = testService.findFiltered(filter, pageable);
+        var testsPage = studentAssignedTestService.findFiltered(filter, pageable);
         return ResponseEntity.ok(testResourceService.prepareStudentTestAssignationsResource(user, testsPage, pageable));
     }
 
